<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/off"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/off"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/c"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/percent"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/division"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/division"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_7"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_8"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_9"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/x"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_4"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_5"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_6"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/subtract"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_1"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_2"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_3"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/add"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/_0"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/dot"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lavendar"
            app:strokeColor="@color/lavendar"
            app:strokeWidth="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:layout_height="100dp"
            android:text="@string/equal"
            android:textSize="@dimen/_25ssp"
            android:backgroundTint="@color/lavendar"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_3sdp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"/>
    </GridLayout>

</RelativeLayout>